# mercadolibre-python

./: README.md  pyproject.toml  setup.py
mercadolibre/: client.py  decorators.py  exceptions.py
tests/: test_client.py
